// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders animated fab 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "transparent",
      "borderRadius": 16,
      "opacity": 1,
      "position": "absolute",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="animated-fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "backgroundColor": "transparent",
        "borderRadius": 16,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="animated-fab-container"
  >
    <View
      collapsable={false}
      style={
        {
          "borderRadius": 16,
          "height": 56,
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "elevation": 0,
            },
          ]
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "borderRadius": 16,
              "bottom": 0,
              "elevation": 3,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 72,
            }
          }
          testID="animated-fab-extended-shadow"
        />
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "borderRadius": 16,
              "bottom": 0,
              "elevation": 3,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": [
                {
                  "translateX": 16,
                },
              ],
              "width": 56,
            }
          }
          testID="animated-fab-shadow"
        />
      </View>
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "borderRadius": 16,
            "flexDirection": "row",
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "rgba(234, 221, 255, 1)",
              "borderRadius": 16,
              "height": 56,
              "left": 16,
              "right": undefined,
              "transform": [
                {
                  "translateX": 0,
                },
              ],
              "width": 72,
            }
          }
        >
          <View
            accessibilityLabel=""
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 16,
                },
              ]
            }
            testID="animated-fab"
          >
            <View
              style={
                [
                  {
                    "height": 56,
                  },
                  {
                    "borderRadius": 16,
                    "width": 72,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "alignItems": "center",
          "height": 56,
          "justifyContent": "center",
          "left": 16,
          "position": "absolute",
          "right": undefined,
          "transform": [
            {
              "translateX": 0,
            },
          ],
          "width": 56,
        }
      }
    >
      <Text
        accessibilityElementsHidden={true}
        allowFontScaling={false}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          [
            {
              "color": "rgba(33, 0, 93, 1)",
              "fontSize": 24,
            },
            [
              {
                "lineHeight": 24,
                "transform": [
                  {
                    "scaleX": 1,
                  },
                ],
              },
              {
                "backgroundColor": "transparent",
              },
            ],
            {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        󰐕
      </Text>
    </View>
    <View
      pointerEvents="none"
    >
      <Text
        collapsable={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgba(33, 0, 93, 1)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0.1,
            "lineHeight": 20,
            "minWidth": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 16,
            "textAlign": "left",
            "top": -28,
            "transform": [
              {
                "translateX": 56,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="animated-fab-text"
      />
    </View>
  </View>
</View>
`;

exports[`renders animated fab with label on the left 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "transparent",
      "borderRadius": 16,
      "opacity": 1,
      "position": "absolute",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="animated-fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "backgroundColor": "transparent",
        "borderRadius": 16,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="animated-fab-container"
  >
    <View
      collapsable={false}
      style={
        {
          "borderRadius": 16,
          "height": 56,
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "elevation": 0,
            },
          ]
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "borderRadius": 16,
              "bottom": 0,
              "elevation": 3,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 72,
            }
          }
          testID="animated-fab-extended-shadow"
        />
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "borderRadius": 16,
              "bottom": 0,
              "elevation": 3,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": [
                {
                  "translateX": 0,
                },
              ],
              "width": 56,
            }
          }
          testID="animated-fab-shadow"
        />
      </View>
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "borderRadius": 16,
            "flexDirection": "row",
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "rgba(234, 221, 255, 1)",
              "borderRadius": 16,
              "height": 56,
              "left": -16,
              "right": undefined,
              "transform": [
                {
                  "translateX": 0,
                },
              ],
              "width": 72,
            }
          }
        >
          <View
            accessibilityLabel="text"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 16,
                },
              ]
            }
            testID="animated-fab"
          >
            <View
              style={
                [
                  {
                    "height": 56,
                  },
                  {
                    "borderRadius": 16,
                    "width": 72,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "alignItems": "center",
          "height": 56,
          "justifyContent": "center",
          "left": -16,
          "position": "absolute",
          "right": undefined,
          "transform": [
            {
              "translateX": 16,
            },
          ],
          "width": 56,
        }
      }
    >
      <Text
        accessibilityElementsHidden={true}
        allowFontScaling={false}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          [
            {
              "color": "rgba(33, 0, 93, 1)",
              "fontSize": 24,
            },
            [
              {
                "lineHeight": 24,
                "transform": [
                  {
                    "scaleX": 1,
                  },
                ],
              },
              {
                "backgroundColor": "transparent",
              },
            ],
            {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        󰐕
      </Text>
    </View>
    <View
      pointerEvents="none"
    >
      <Text
        collapsable={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgba(33, 0, 93, 1)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "500",
            "left": 16,
            "letterSpacing": 0.1,
            "lineHeight": 20,
            "minWidth": 0,
            "opacity": 0,
            "position": "absolute",
            "textAlign": "left",
            "top": -28,
            "transform": [
              {
                "translateX": 56,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="animated-fab-text"
      >
        text
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders animated fab with label on the right by default 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "transparent",
      "borderRadius": 16,
      "opacity": 1,
      "position": "absolute",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="animated-fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "backgroundColor": "transparent",
        "borderRadius": 16,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="animated-fab-container"
  >
    <View
      collapsable={false}
      style={
        {
          "borderRadius": 16,
          "height": 56,
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "elevation": 0,
            },
          ]
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "borderRadius": 16,
              "bottom": 0,
              "elevation": 3,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 72,
            }
          }
          testID="animated-fab-extended-shadow"
        />
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "borderRadius": 16,
              "bottom": 0,
              "elevation": 3,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": [
                {
                  "translateX": 16,
                },
              ],
              "width": 56,
            }
          }
          testID="animated-fab-shadow"
        />
      </View>
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "borderRadius": 16,
            "flexDirection": "row",
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "rgba(234, 221, 255, 1)",
              "borderRadius": 16,
              "height": 56,
              "left": 16,
              "right": undefined,
              "transform": [
                {
                  "translateX": 0,
                },
              ],
              "width": 72,
            }
          }
        >
          <View
            accessibilityLabel="text"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 16,
                },
              ]
            }
            testID="animated-fab"
          >
            <View
              style={
                [
                  {
                    "height": 56,
                  },
                  {
                    "borderRadius": 16,
                    "width": 72,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "alignItems": "center",
          "height": 56,
          "justifyContent": "center",
          "left": 16,
          "position": "absolute",
          "right": undefined,
          "transform": [
            {
              "translateX": 0,
            },
          ],
          "width": 56,
        }
      }
    >
      <Text
        accessibilityElementsHidden={true}
        allowFontScaling={false}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          [
            {
              "color": "rgba(33, 0, 93, 1)",
              "fontSize": 24,
            },
            [
              {
                "lineHeight": 24,
                "transform": [
                  {
                    "scaleX": 1,
                  },
                ],
              },
              {
                "backgroundColor": "transparent",
              },
            ],
            {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        󰐕
      </Text>
    </View>
    <View
      pointerEvents="none"
    >
      <Text
        collapsable={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgba(33, 0, 93, 1)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0.1,
            "lineHeight": 20,
            "minWidth": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 16,
            "textAlign": "left",
            "top": -28,
            "transform": [
              {
                "translateX": 56,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="animated-fab-text"
      >
        text
      </Text>
    </View>
  </View>
</View>
`;
